--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "settlement-xlm",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Settle Interledger payments using on-ledger XLM transfers",
   "bin": {
     "ilp-settlement-xlm": "./bin/run.js"
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "start": "./bin/run.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,8 +32,11 @@
     "stellar-sdk": "^6.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/debug": "^4.1.5",
     "@types/node-fetch": "^2.5.7",
-    "typescript": "^4.0.3"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.2"
   }
 }
