--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,12 @@
     "rootDir": "src",
     "outDir": "dist",
     "target": "esnext",
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
     "removeComments": true,
-    "strict": true /* Enable all strict type-checking options. */,
+    "strict": true,
     "esModuleInterop": true
   },
   "include": ["src/**/*"]
